--- a/crystal_heating/heating.in
+++ b/crystal_heating/heating.in
@@ -1,6 +1,6 @@
+# GPU
 package gpu 0
 suffix gpu
-#package omp 1
 
 # INIT
 units metal
@@ -12,23 +12,29 @@ atom_modify map yes
 # SET LATTICE
 lattice diamond 5.43 orient x 1 0 0 orient y 0 1 0 orient z 0 0 1
 
-# CREATE SYMULATION BOX
+# VARIABLES
 variable width equal "4"
-variable depth equal "16"
+variable depth equal "80"
+
 variable top equal "15.3"
-variable start_temp equal "1"
-variable end_temp   equal "1000"
+
+variable start_temp equal "1e-6"
+variable end_temp   equal "1e-6"
+
 variable tdamp equal "100"
 variable heat_time equal "1 * 1000 * 1000"
 
+# CREATE SIMULATION BOX
 region symbox block -${width} ${width} -${width} ${width} -${depth} ${depth} units lattice
 create_box 1 symbox
 
-# CREATE ATOMS
-region si_all block -${width} ${width} -${width} ${width} -${depth} 0               units lattice
-region si_fix block -${width} ${width} -${width} ${width} -${depth} $(-v_depth+0.5) units lattice
+# CREATE REGIONS
+region si_all block EDGE EDGE EDGE EDGE EDGE ${top}          units lattice
+region si_fix block EDGE EDGE EDGE EDGE EDGE $(-v_depth+0.5) units lattice
 
-region top block -${width} ${width} -${width} ${width} -0.2 0 units lattice
+region top block EDGE EDGE EDGE EDGE $(v_top -0.2) ${top} units lattice
+
+# CREATE ATOMS
 create_atoms 1 region si_all
 mass 1 28.08553
 
@@ -54,20 +60,22 @@ variable vacs equal "c_vac_sum"
 
 # COMPUTE TOP
 compute top_sum top reduce sum z
-variable top_num equal count(top)
-variable top_avrg equal "c_top_sum / v_top_num"
+variable top_avrg equal "c_top_sum / count(top)"
+
 variable step equal "step"
 
-# SET START CONDITIONS
+# MINIMIZE
 minimize 1e-20 1e-20 1000 1000
+
+# MINIMAL ENERGY
 velocity nve create ${start_temp} 4928459 dist gaussian
-timestep 0.001
 
 # FIXES
-#fix extra1 all print 10 "${step} ${top_avrg}" file graph1.txt screen no
+fix extra1 all print 10 "${step} ${top_avrg}" file graph1.txt screen no
 fix f_norm nve nvt temp ${start_temp} ${end_temp} $(v_tdamp*dt)
 
 # THERMO
+timestep 0.001
 reset_timestep 0
 thermo 50
 thermo_style custom step pe ke etotal temp v_vacs
@@ -80,5 +88,5 @@ unfix f_norm
 fix f_nve nve nve
 fix extra2 all print 10 "${step} ${top_avrg}" file graph2.txt screen no
 
-run 1000
+run 20000
 write_data output.data
