--- a/container/Containerfile
+++ b/container/Containerfile
@@ -1,28 +1,29 @@
 FROM gentoo/stage3 as builder
 
-RUN echo 'GENTOO_MIRRORS="https://ftp.lysator.liu.se/gentoo/"' >> /etc/portage/make.conf \
-  && echo 'FEATURES="-ipc-sandbox -network-sandbox -pid-sandbox"' >> /etc/portage/make.conf \
-    && getuto && emerge-webrsync
+RUN cat <<EOF >> /etc/portage/make.conf
+GENTOO_MIRRORS="https://ftp.lysator.liu.se/gentoo/"
+FEATURES="-ipc-sandbox -network-sandbox -pid-sandbox"
+EOF
+RUN getuto && emerge-webrsync && emerge -j 5 -DNug @world
 
 RUN echo 'sci-physics/lammps' >> /etc/portage/package.accept_keywords/all
-
-RUN echo 'sci-physics/lammps extra mpi opencl openmp python' >> /etc/portage/package.use/lammps \
-  && echo 'sci-libs/netcdf mpi' >> /etc/portage/package.use/lammps \
-  && echo 'sci-libs/hdf5 mpi' >> /etc/portage/package.use/lammps \
-  && echo 'virtual/mpi romio' >> /etc/portage/package.use/lammps
-
+RUN cat <<EOF > /etc/portage/package.use/lammps
+sci-physics/lammps extra mpi opencl openmp python
+sci-libs/netcdf mpi
+sci-libs/hdf5 mpi
+virtual/mpi romio
+EOF
 RUN emerge -j 5 -g lammps
 
-RUN echo 'dev-python/pillow webp' >> /etc/portage/package.use/python \
-  && echo 'virtual/imagemagick-tools tiff jpeg' >> /etc/portage/package.use/python \
-  && echo 'media-gfx/imagemagick tiff jpeg' >> /etc/portage/package.use/python \
-  && echo 'dev-lang/python tk' >> /etc/portage/package.use/python
-
-RUN emerge -j 5 -g numpy matplotlib virtualenv mpi4py scipy mypy black
-
+RUN cat <<EOF > /etc/portage/package.use/python
+dev-python/pillow webp
+virtual/imagemagick-tools tiff jpeg
+media-gfx/imagemagick tiff jpeg
+dev-lang/python tk
+EOF
 RUN emerge -j 5 -DNug @world
+RUN emerge -j 5 -g numpy matplotlib mpi4py scipy mypy black dev-python/pip
 
 RUN emerge -c && rm -rf /var/db/repos && rm -rf /var/cache
-
 FROM gentoo/stage3 as final
 COPY --from=builder / /
