--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,4 +4,19 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
-dependencies = []
+dependencies = [
+    "matplotlib>=3.10.3",
+    "pydantic>=2.11.4",
+    "typer>=0.15.4",
+]
+
+[dependency-groups]
+dev = [
+    "black>=25.1.0",
+    "mypy>=1.15.0",
+    "python-lsp-server[all]>=1.12.2",
+    "ruff>=0.11.10",
+]
+
+[tool.black]
+line-length = 79
